--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-	--brand-color-hedfut: orange;
+	--brand-color-hedfut: #188CE8;
 	--brand-color-mame: #212121;
 }
 
@@ -7,30 +7,37 @@
 body {
 	font-family: "Roboto", sans-serif;
 	color: #212121;
-	cursor: pointer;
+	font-size: 14px;
+	letter-spacing: 0.03em;
+	background-color: #ffffff;	
 }
 
 /*--index--Заголовок--*/
 .header-logo {
 	font-family: "Raleway", sans-serif;
-	/*font-style: normal;*/
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.2;
 	color: #000000;
 	text-decoration: none;
-	letter-spacing: 0.03em;
-}
+	}
+
+	.header-logo-futer {
+	font-family: "Raleway", sans-serif;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.2;
+	color: #ffffff; 
+	text-decoration: none;
+	}
 
 .logo-web {
 	color: #2196f3;
 }
 
 /*--index--Ссилки--*/
-
 .header-list .link-pasiv {
-	font-weight: 500;
-	font-size: 14px;
+	font-weight: 500;	
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	text-decoration: none;
@@ -39,8 +46,7 @@ body {
 }
 
 .header-list .link-activ {
-	font-weight: 500;
-	font-size: 14px;
+	font-weight: 500;	
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	text-decoration: none;
@@ -49,7 +55,6 @@ body {
 }
 
 /*--hover and focus --*/
-
 .link-activ:hover,
 .link-activ:focus {
 	color: var(--brand-color-hedfut);
@@ -62,10 +67,9 @@ body {
 
 .linc-mail {
 	font-weight: 500;
-	font-size: 14px;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
-	color: #2196f3;
+	color: #757575;
 	text-decoration: none;
 }
 
@@ -75,8 +79,7 @@ body {
 }
 
 .linc-tel {
-	font-weight: 500;
-	font-size: 14px;
+	font-weight: 500;	
 	line-height: 1.14;
 	letter-spacing: 0.02em;
 	color: #757575;
@@ -114,7 +117,8 @@ body {
 
 .button-zakaz:hover,
 .button-zakaz:focus {
-	color: var(--brand-color-hedfut);
+	color: #ffffff;
+	background: #2196f3;
 }
 
 .button-activ {
@@ -123,94 +127,80 @@ body {
 
 	font-weight: 500;
 	font-size: 16px;
-	line-height: 1.63;
-	letter-spacing: 0.03em;
+	line-height: 1.63;	
 	cursor: pointer;
 }
 
 .button-activ:hover,
 .button-activ:focus {
-	color: var(--brand-color-hedfut);
-	background: #0414f5;
+	color:  #ffffff;
+	background: #2196f3;
+}
+
+.batton-pasiv {
+	color: #212121;
+	background: #f5f4fa;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.63;
+	text-align: center;	
+	cursor: pointer;
 }
 
 .batton-pasiv:hover,
 .batton-pasiv:focus {
-	color: var(--brand-color-hedfut);
-	background: #0414f5;
-}
-
-.batton-pasiv {
-	color: var(--brand-color-mame);
-	background: #f5f4fa;
-
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.63;
-	text-align: center;
-	letter-spacing: 0.03em;
-	cursor: pointer;
+	color:  #ffffff;
+	background: #2196f3;
 }
 
 .head-rysy {
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 1.14;
-	letter-spacing: 0.03em;
+	font-weight: 700;	
+	line-height: 1.14;	
 	text-transform: uppercase;
 	color: var(--brand-color-mame);
 }
 
 .head-opys {
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 2;
-	letter-spacing: 0.03em;
+	font-weight: 400;	
+	line-height: 2;	
 	color: #757575;
 }
 
 /*--Послуги і Команда--*/
-
 .head-poslugu,
 .head-command {
 	font-weight: 700;
 	font-size: 36px;
 	line-height: 42px;
-	text-align: center;
-	letter-spacing: 0.03em;
+	text-align: center;	
 	color: var(--brand-color-mame);
 }
 
 .mame {
 	font-weight: 500;
 	font-size: 16px;
-	line-height: 1.19px;
-	text-align: center;
-	letter-spacing: 0.03em;
+	line-height: 1.19;
+	text-align: center;	
 	color: var(--brand-color-mame);
-}
+	}
 
 .work {
 	font-weight: 400;
 	font-size: 16px;
-	line-height: 1.19px;
-	text-align: center;
-	letter-spacing: 0.03em;
-	color: #757575;
+	line-height: 1.19;
+	text-align: center;	
+	color: #757575;	
 }
 
 /*--footer--*/
-
 .footer {
 	background: #2f303a;
 }
 
 .footer-adress {
 	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 2;
-	letter-spacing: 0.03em;
+	font-weight: 400;	
+	line-height: 2;	
 	color: #ffffff;
 	text-decoration: none;
 }
@@ -222,10 +212,8 @@ body {
 
 .footer-contact {
 	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 2;
-	letter-spacing: 0.03em;
+	font-weight: 400;	
+	line-height: 2;	
 	color: rgba(255, 255, 255, 0.6);
 	text-decoration: none;
 }
@@ -240,15 +228,14 @@ body {
 .portfolio-hed {
 	font-weight: 700;
 	font-size: 18px;
-	line-height: 2;
+	line-height: 2.00;	
 	letter-spacing: 0.06em;
 	color: var(--brand-color-mame);
-}
+	}
 
 .portfolio-text {
 	font-weight: 400;
 	font-size: 16px;
-	line-height: 1.88;
-	letter-spacing: 0.03em;
-	color: #757575;
+	line-height: 1.88;	
+	color: #757575;	
 }
